[gd_scene load_steps=30 format=3 uid="uid://ccoruqmt7jkqm"]

[ext_resource type="Script" path="res://scenes/main/fires/electric_fire.gd" id="1_a8odt"]
[ext_resource type="Texture2D" uid="uid://pmsassij0oe5" path="res://assets/APfkB6p.png" id="2_15xne"]
[ext_resource type="Texture2D" uid="uid://bw7sjvvm703ki" path="res://scenes/main/assets/electric.png" id="3_wpphv"]
[ext_resource type="Texture2D" uid="uid://cdphdnwow7it0" path="res://scenes/main/assets/fire/normal/fire.png" id="4_mgyms"]
[ext_resource type="Texture2D" uid="uid://beeqctgi3v1rb" path="res://scenes/main/assets/fire/explosion/explosion-c1.png" id="5_bukta"]
[ext_resource type="Texture2D" uid="uid://6xia0fnuh08c" path="res://scenes/main/assets/fire/explosion/explosion-c2.png" id="6_24in0"]
[ext_resource type="Texture2D" uid="uid://pj0m0pw003k0" path="res://scenes/main/assets/fire/explosion/explosion-c3.png" id="7_ho2dr"]
[ext_resource type="Texture2D" uid="uid://dqt8ww3p5pj68" path="res://scenes/main/assets/fire/explosion/explosion-c4.png" id="8_0hdd0"]
[ext_resource type="Texture2D" uid="uid://burkbtkfbt71q" path="res://scenes/main/assets/fire/explosion/explosion-c5.png" id="9_u5wtw"]
[ext_resource type="Texture2D" uid="uid://cfrexs5rn27v8" path="res://scenes/main/assets/fire/explosion/explosion-c6.png" id="10_i5cg2"]
[ext_resource type="Texture2D" uid="uid://b1ee5uts4raom" path="res://scenes/main/assets/fire/explosion/explosion-c7.png" id="11_cjt1c"]
[ext_resource type="Texture2D" uid="uid://drdd2tqy6wq62" path="res://scenes/main/assets/fire/explosion/explosion-c8.png" id="12_uv4jr"]
[ext_resource type="Texture2D" uid="uid://dwtmqam7rtgd3" path="res://scenes/main/assets/fire/explosion/explosion-c9.png" id="13_y23qq"]
[ext_resource type="Texture2D" uid="uid://1j02ugqvmxsh" path="res://scenes/main/assets/fire/explosion/explosion-c10.png" id="14_2excg"]
[ext_resource type="SpriteFrames" uid="uid://dlpx530qj5agg" path="res://scenes/main/fires/resource/black_smoke.tres" id="15_cvq73"]
[ext_resource type="PackedScene" uid="uid://cadspbyt16ybn" path="res://scenes/main/fires/burn_area.tscn" id="16_xkasx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvjri"]
size = Vector2(46, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_57sde"]
atlas = ExtResource("3_wpphv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq138"]
atlas = ExtResource("3_wpphv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaixr"]
atlas = ExtResource("3_wpphv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jjisr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57sde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq138")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaixr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_g4a0w"]
atlas = ExtResource("4_mgyms")
region = Rect2(0, 0, 66, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq4od"]
atlas = ExtResource("4_mgyms")
region = Rect2(66, 0, 66, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0dhn"]
atlas = ExtResource("4_mgyms")
region = Rect2(132, 0, 66, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_36twq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4a0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq4od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0dhn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_x80eb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_bukta")
}, {
"duration": 1.0,
"texture": ExtResource("6_24in0")
}, {
"duration": 1.0,
"texture": ExtResource("7_ho2dr")
}, {
"duration": 1.0,
"texture": ExtResource("8_0hdd0")
}, {
"duration": 1.0,
"texture": ExtResource("9_u5wtw")
}, {
"duration": 1.0,
"texture": ExtResource("10_i5cg2")
}, {
"duration": 1.0,
"texture": ExtResource("11_cjt1c")
}, {
"duration": 1.0,
"texture": ExtResource("12_uv4jr")
}, {
"duration": 1.0,
"texture": ExtResource("13_y23qq")
}, {
"duration": 1.0,
"texture": ExtResource("14_2excg")
}],
"loop": false,
"name": &"explode",
"speed": 10.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_n5hxr"]
properties/0/path = NodePath(".:spray_times")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_potxj"]
size = Vector2(51, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4f86"]
size = Vector2(70, 70)

[node name="ElectricFire" type="Area2D"]
z_index = 1
position = Vector2(-1, -13)
collision_mask = 35
script = ExtResource("1_a8odt")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-2.38419e-07, -17)
scale = Vector2(0.291039, 0.153152)
texture = ExtResource("2_15xne")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_wvjri")

[node name="Electric" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(4.5, -12.5)
scale = Vector2(1.26562, 1.39062)
sprite_frames = SubResource("SpriteFrames_jjisr")
animation = &"idle"
frame_progress = 0.0435774

[node name="Fire" type="AnimatedSprite2D" parent="."]
position = Vector2(4.77999, -11)
scale = Vector2(0.855152, 1.0625)
sprite_frames = SubResource("SpriteFrames_36twq")
animation = &"idle"
frame_progress = 0.308771

[node name="BiggerFire" type="AnimatedSprite2D" parent="."]
position = Vector2(3.25003, -22)
scale = Vector2(1.02273, 1.40625)
sprite_frames = SubResource("SpriteFrames_36twq")
animation = &"idle"
frame_progress = 0.647747

[node name="Explosion" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(9, -25)
scale = Vector2(1.23438, 1.3125)
sprite_frames = SubResource("SpriteFrames_x80eb")
animation = &"explode"
frame = 9
frame_progress = 1.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_n5hxr")

[node name="MessagePosition" type="Node2D" parent="."]
position = Vector2(-3, -77)

[node name="Smoke" type="AnimatedSprite2D" parent="."]
position = Vector2(-17, -84)
scale = Vector2(0.707182, 0.436384)
sprite_frames = ExtResource("15_cvq73")
animation = &"idle"

[node name="Smoke2" type="AnimatedSprite2D" parent="."]
position = Vector2(36, -84)
scale = Vector2(0.748619, 0.465216)
sprite_frames = ExtResource("15_cvq73")
animation = &"idle"

[node name="BurnArea" parent="." instance=ExtResource("16_xkasx")]
position = Vector2(0, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BurnArea"]
position = Vector2(1.5, 3)
shape = SubResource("RectangleShape2D_potxj")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2, -11)
shape = SubResource("RectangleShape2D_w4f86")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
